--- a/onda-consciente/src/Scss/style.css
+++ b/onda-consciente/src/Scss/style.css
@@ -176,4 +176,84 @@ header .Logo .title p {
   header .Logo .title p {
     display: none;
   }
+}
+
+footer {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(250, 207, 154, 0.336);
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+footer .footer {
+  width: 85%;
+  margin: 0 auto;
+  align-items: center;
+}
+footer .footer p {
+  text-align: center;
+  padding-bottom: 0.5rem;
+  align-items: center;
+  justify-content: center;
+  align-self: center;
+}
+footer .footer .parceiros-content {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  align-items: center;
+  width: 100%;
+  height: 80%;
+}
+@media (min-width: 577px) and (max-width: 768px) {
+  footer .footer .parceiros-content {
+    grid-template-columns: repeat(6, 1fr);
+  }
+}
+@media (max-width: 576px) {
+  footer .footer .parceiros-content {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+footer .footer .parceiros-content .logo-parceiros {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+footer .footer .parceiros-content .logo-parceiros img {
+  width: 100%;
+  align-items: center;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+@media (min-width: 577px) and (max-width: 768px) {
+  footer .footer .parceiros-content .logo-parceiros img {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+footer .footer .equipe {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+@media (max-width: 576px) {
+  footer .footer .equipe {
+    grid-template-columns: 1fr;
+  }
+}
+footer .footer .equipe a {
+  width: 100%;
+  margin: 0 auto;
+  margin-right: 1rem;
+  text-decoration: none;
+  text-align: center;
+  color: black;
+  gap: 1rem;
 }/*# sourceMappingURL=style.css.map */
