--- a/onda-consciente/src/Scss/style.scss
+++ b/onda-consciente/src/Scss/style.scss
@@ -169,3 +169,67 @@ header {
     }
   }
 }
+
+footer {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  background-color: $color-sand;
+  @include mixins.py(1rem, 1rem);
+  .footer {
+    width: 85%;
+    margin: 0 auto;
+    align-items: center;
+    p {
+      text-align: center;
+      padding-bottom: 0.5rem;
+      align-items: center;
+      justify-content: center;
+      align-self: center;
+    }
+    .parceiros-content {
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      @include mixins.py(0.5rem, 0.5rem);
+      align-items: center;
+      width: 100%;
+      height: 80%;
+      @include mixins.breakpoint(medium) {
+        grid-template-columns: repeat(6, 1fr);
+      }
+      @include mixins.breakpoint(small) {
+        grid-template-columns: repeat(3, 1fr);
+      }
+      .logo-parceiros {
+        @include mixins.px(0.5rem, 0.5rem);
+        @include mixins.px(0.5rem, 0.5rem);
+        img {
+          width: 100%;
+          align-items: center;
+          @include mixins.px(0.5rem, 0.5rem);
+          height: fit-content;
+          @include mixins.breakpoint(medium) {
+            @include mixins.px(0, 0);
+          }
+        }
+      }
+    }
+    .equipe {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      @include mixins.py(0.5rem, 0.5rem);
+      @include mixins.breakpoint(small) {
+        grid-template-columns: 1fr;
+      }
+      a {
+        width: 100%;
+        margin: 0 auto;
+        margin-right: 1rem;
+        text-decoration: none;
+        text-align: center;
+        color: $color-black;
+        gap: 1rem;
+      }
+    }
+  }
+}
