--- a/onda-consciente/src/Scss/style.css
+++ b/onda-consciente/src/Scss/style.css
@@ -178,6 +178,130 @@ header .Logo .title p {
   }
 }
 
+.home {
+  width: 85%;
+  margin: 0 auto;
+  height: -moz-fit-content;
+  height: fit-content;
+  display: grid;
+}
+@media (min-width: 577px) and (max-width: 768px) {
+  .home {
+    width: 90%;
+  }
+}
+.home .main {
+  display: grid;
+  grid-template-columns: 65% 35%;
+  padding-top: 2rem;
+  padding-bottom: 0;
+}
+@media (min-width: 577px) and (max-width: 768px) {
+  .home .main {
+    grid-template-columns: 50% 50%;
+  }
+}
+@media (max-width: 576px) {
+  .home .main {
+    grid-template-columns: 1fr;
+  }
+}
+.home .main .noticias {
+  width: 100%;
+  height: -moz-fit-content;
+  height: fit-content;
+  border-radius: 10px;
+  justify-content: end;
+  padding-bottom: 1rem;
+  padding-left: 1rem;
+  padding-right: 0;
+}
+@media (max-width: 576px) {
+  .home .main .noticias {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+.home .main .noticias .noticias-main {
+  border-radius: 10px;
+  background-color: rgba(255, 166, 0, 0.664);
+  transition: transform 0.3s, box-shadow 0.3s;
+  margin: 0 auto;
+}
+.home .main .noticias .noticias-main:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+.home .main .noticias .noticias-main h3 {
+  font-size: 1.4rem;
+}
+.home .main .noticias .noticias-main .noticias-item {
+  padding-top: 1rem;
+  padding-bottom: 1.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  margin-top: 0;
+  margin-bottom: 1rem;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  text-align: justify;
+}
+.home .main .noticias .noticias-main .noticias-item .noticias-image {
+  width: 100%;
+}
+.home .main .noticias .noticias-main .noticias-item .noticias-image img {
+  width: 100%;
+  margin: 0 auto;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+.home .main .content {
+  width: 100%;
+  height: 100%;
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+.home .main .content video {
+  border-radius: 10px;
+  width: 100%;
+  height: 18%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.home .main .content .boxes {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+.home .main .content .boxes .box-A,
+.home .main .content .boxes .box-B {
+  width: 100%;
+}
+.home .main .content .boxes .box-A h3,
+.home .main .content .boxes .box-B h3 {
+  font-size: 1.6rem;
+  padding-top: 1rem;
+  padding-bottom: 0.5rem;
+}
+.home .main .content .boxes .box-A p,
+.home .main .content .boxes .box-B p {
+  text-align: justify;
+  font-size: 1.1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+.home .main .content .boxes .box-A img {
+  width: 100%;
+  border-radius: 10px;
+}
+
 footer {
   position: relative;
   height: 100%;
