--- a/onda-consciente/src/Scss/style.scss
+++ b/onda-consciente/src/Scss/style.scss
@@ -169,6 +169,114 @@ header {
     }
   }
 }
+.home {
+  width: 85%;
+  margin: 0 auto;
+  height: fit-content;
+  display: grid;
+  // grid-template-columns: 1fr;
+  @include mixins.breakpoint(medium) {
+    width: 90%;
+  }
+  .main {
+    display: grid;
+    grid-template-columns: 65% 35%;
+
+    @include mixins.py(2rem, 0);
+    @include mixins.breakpoint(medium) {
+      grid-template-columns: 50% 50%;
+    }
+    @include mixins.breakpoint(small) {
+      grid-template-columns: 1fr;
+    }
+    .noticias {
+      width: 100%;
+      height: fit-content;
+      border-radius: 10px;
+      justify-content: end;
+      padding-bottom: 1rem;
+      @include mixins.px(1rem, 0);
+      @include mixins.breakpoint(small) {
+        @include mixins.px(0, 0);
+      }
+      .noticias-main {
+        border-radius: 10px;
+        background-color: $color-orange-light;
+        transition: transform 0.3s, box-shadow 0.3s;
+        margin: 0 auto;
+
+        &:hover {
+          transform: translateY(-10px);
+          box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        }
+        h3 {
+          font-size: 1.4rem;
+        }
+        .noticias-item {
+          @include mixins.py(1rem, 1.5rem);
+          @include mixins.px(1rem, 1rem);
+          @include mixins.my(0, 1rem);
+          //   width: 85%;
+          margin: 0 auto;
+          justify-content: center;
+          align-items: center;
+          border-radius: 10px;
+          text-align: justify;
+          .noticias-image {
+            width: 100%;
+            img {
+              width: 100%;
+              margin: 0 auto;
+              border-radius: 10px;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              @include mixins.my(0, 1rem);
+            }
+          }
+        }
+      }
+    }
+    .content {
+      width: 100%;
+      height: 100%;
+      column-gap: 1rem;
+      display: flex;
+      flex-direction: column;
+
+      video {
+        border-radius: 10px;
+        width: 100%;
+        height: 18%;
+        object-fit: cover;
+      }
+
+      .boxes {
+        height: fit-content;
+        .box-A,
+        .box-B {
+          width: 100%;
+          h3 {
+            font-size: 1.6rem;
+            @include mixins.py(1rem, 0.5rem);
+          }
+          p {
+            text-align: justify;
+            font-size: 1.1rem;
+            @include mixins.py(0.5rem, 0.5rem);
+          }
+        }
+        .box-A {
+          img {
+            width: 100%;
+            border-radius: 10px;
+            // @include mixins.py(1rem, 1rem);
+          }
+        }
+      }
+    }
+  }
+}
 
 footer {
   position: relative;
@@ -233,4 +341,3 @@ footer {
     }
   }
 }
-
