--- a/onda-consciente/src/Scss/style.css
+++ b/onda-consciente/src/Scss/style.css
@@ -302,6 +302,87 @@ header .Logo .title p {
   border-radius: 10px;
 }
 
+.sobre {
+  width: 85%;
+  margin: 0 auto;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+.sobre .sobre-content {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  display: grid;
+  grid-template-columns: 60% 40%;
+  align-items: center;
+}
+@media (min-width: 577px) and (max-width: 768px) {
+  .sobre .sobre-content {
+    grid-template-columns: 1fr;
+  }
+}
+@media (max-width: 576px) {
+  .sobre .sobre-content {
+    grid-template-columns: 1fr;
+  }
+}
+.sobre .sobre-content div {
+  padding-bottom: 1rem;
+}
+.sobre .sobre-content div img {
+  width: 100%;
+  border-radius: 10px;
+}
+.sobre .sobre-content div p {
+  text-align: justify;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+.sobre .sobre-content div a {
+  text-decoration: none;
+  text-align: center;
+}
+.sobre .sobre-content .sobre-item {
+  padding-left: 1.5rem;
+  padding-right: 0;
+}
+@media (min-width: 577px) and (max-width: 768px) {
+  .sobre .sobre-content .sobre-item {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+@media (max-width: 576px) {
+  .sobre .sobre-content .sobre-item {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+.sobre .faq {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  text-align: center;
+}
+.sobre .faq .faq-section {
+  display: grid;
+  width: 80%;
+  margin: 0 auto;
+}
+.sobre .faq .faq-section .faq-item {
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+  background-color: #4169e1;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  border-radius: 10px;
+  text-align: justify;
+}
+.sobre .faq .faq-section .faq-item .faq-card {
+  width: 80%;
+  margin: 0 auto;
+}
+
 footer {
   position: relative;
   height: 100%;
