--- a/onda-consciente/src/Scss/style.scss
+++ b/onda-consciente/src/Scss/style.scss
@@ -273,7 +273,69 @@ header {
     }
   }
 }
-
+.sobre {
+  width: 85%;
+  margin: 0 auto;
+  @include mixins.py(1rem, 1rem);
+  .sobre-content {
+    @include mixins.py(1rem, 1rem);
+    display: grid;
+    grid-template-columns: 60% 40%;
+    // column-gap: 2rem;
+    align-items: center;
+    @include mixins.breakpoint(medium) {
+      grid-template-columns: 1fr;
+    }
+    @include mixins.breakpoint(small) {
+      grid-template-columns: 1fr;
+    }
+    div {
+      padding-bottom: 1rem;
+      img {
+        width: 100%;
+        border-radius: 10px;
+      }
+      p {
+        text-align: justify;
+        height: fit-content;
+      }
+      a {
+        text-decoration: none;
+        text-align: center;
+      }
+    }
+    .sobre-item {
+      @include mixins.px(1.5rem, 0);
+      @include mixins.breakpoint(medium) {
+        @include mixins.px(0, 0);
+      }
+      @include mixins.breakpoint(small) {
+        @include mixins.px(0, 0);
+      }
+    }
+  }
+  .faq {
+    @include mixins.py(1rem, 1rem);
+    text-align: center;
+    .faq-section {
+      display: grid;
+      width: 80%;
+      margin: 0 auto;
+      .faq-item {
+        column-gap: 1rem;
+        background-color: $color-blue;
+        @include mixins.py(3rem, 3rem);
+        @include mixins.px(1.5rem, 1.5rem);
+        border-radius: 10px;
+        text-align: justify;
+        .faq-card {
+          width: 80%;
+          margin: 0 auto;
+        }
+      }
+    }
+  }
+}
 footer {
   position: relative;
   height: 100%;
